fixed navbar overlap issue

--- a/packd/packr/static/packr/style.css
+++ b/packd/packr/static/packr/style.css
@@ -8,3 +8,5 @@
 	text-align: left;
 	padding: 5px;
 }
+
+body { padding-top: 70px; }
